ClipIt-1.4.2-20111115004 ~ 2011-11-15 11:05:10 +0200

+ Fixed: Updated translations.


ClipIt-1.4.2-20111115003 - 2011-11-15 10:48:36 +0200

+ Fixed: Present the user with the existing dialog, if he tries to
		open one while another one is active.


ClipIt-1.4.2-20111115002 - 2011-11-15 08:59:45 +0200

+ Fixed: Also save history after it is modified by selection of items.


ClipIt-1.4.2-20111115001 - 2011-11-15 08:40:38 +0200

+ Fixed: Added Unity to autostart.


Silence glib warnings regarding GOptionFlags. - 2011-11-09 20:51:51 +0200

These warnings:
GLib-WARNING **: goption.c:2168: ignoring no-arg, optional-arg or filename flags (8) on option of type 0


ClipIt-1.4.2-20111115001 - 2011-11-15 08:27:37 +0200

+ Fixed: Added dirty workaround for Debian multiarch build.


ClipIt-1.4.2-20111018001 - 2011-10-18 15:48:40 +0300

+ Fixed: Fixed a typo in preferences dialog.
+ Fixed: Updated translations.
+ Fixed: Fixed a couple of omissions in the scripts.


ClipIt-1.4.2-20111015001 - 2011-10-15 12:30:45 +0300

+ Fixed: Fixed bug where wrong item was being selected for editing.


ClipIt-1.4.2-20110906001 - 2011-09-06 15:03:00 +0300

+ Added: Added transifex config to repository.
+ Added: Added script for automatic translation updating.
+ Added: Added Bulgarian translation.
+ Fixed: Updated translations.


ClipIt-1.4.2-20110831002 - 2011-08-31 10:24:26 +0300

+ Added: Added commit script to git.


ClipIt-1.4.2-20110831001 - 2011-08-31 10:21:47 +0300

+ Fixed: Fixed remove bug when multiple items were selected in the list.


ClipIt-1.4.2-20110816003 - 2011-08-16 14:24:00 +0300

+ Added: Added some more strings to gettext.
+ Added: Added Estonian translation.


ClipIt-1.4.2-20110816002 - 2011-08-16 13:06:12 +0300

+ Fixed: Fixed bug where in some cases actions and excludes couldn't be
		added. (SF: #3315622) (Thanks to Guido Tabbernuk)


ClipIt-1.4.2-20110816001 - 2011-08-16 12:52:05 +0300

+ Added: Added logic to Makefile to automatically update translation files.