@@ -1,4 +1,9 @@
-ClipIt-1.4.2-20111115004 ~ 2011-11-15 11:05:10 +0200
+ClipIt-1.4.2-20111115005 ~ 2011-11-15 11:46:13 +0200
+
++ Fixed: Fix max height of Manage history window.
+
+
+ClipIt-1.4.2-20111115004 - 2011-11-15 11:05:58 +0200
 
 + Fixed: Updated translations.
 
